--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <script src="/assets/jquery.js?body=1" type="text/javascript"></script>
     <script src="/assets/jquery_ujs.js?body=1" type="text/javascript"></script>
     <script type="text/javascript" src="assets/debugging_example.js"></script>
+    <script type="text/javascript" src="assets/debug.js"></script>
 </head>
 <body>
 
